--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,23 @@
             <version>9.1.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Trae los repos de forma remote,
+        importante dar install sobre maven en el otro proyecto para que se publique localmente y encuentre la libreria
+        -->
+        <dependency>
+            <groupId>org.gmarquezp.java-ejb-remote</groupId>
+            <artifactId>java-ejb-remote</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!--Necesario para poder importar de forma remota mediante wildfly-->
+        <dependency>
+            <groupId>org.wildfly</groupId>
+            <artifactId>wildfly-ejb-client-bom</artifactId>
+            <version>26.1.1.Final</version>  <!--Debe ser la misma del servidor de aplicaciones instalado-->
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
     <build>
@@ -59,6 +76,7 @@
             </plugin>
         </plugins>
     </build>
+
 
 
 
